Drawer component (3901)